# DeepseekCode

./: .gitignore  Cargo.toml  Dockerfile  README.ja-JP.md  README.md  README.zh-CN.md
.dscode/: benchmarks.example.txt  benchmarks.txt  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: agents.md  architecture.md  current-status.md  install.md  mvp.md  pr-integration.md  release.md  repl.md  roadmap.md  runtime.md  rust-stack.md  skills-and-profiles.md  streaming.md  todos.md  tui.md
docs/demo/: README.md  record-model-backed-demo.sh  render-model-backed-demo-svg.js  verify-model-backed-demo.js
docs/dogfood/: 2026-05-03-agent-research-by-dscode.md
editors/vscode/: README.md  extension.js  package.json
npm/: README.md  package.json
npm/scripts/: test-tui-entrypoint-wrapper.js
packaging/homebrew/: deepseek.rb
packaging/launchd/: com.deepseek.agents.plist  com.deepseek.shell-supervisor.plist
packaging/systemd/: deepseek-agents.service  deepseek-diagnostics.service  deepseek-runtime.service  deepseek-shell-supervisor.service
skills/: brainstorm.toml  commit-message.toml  debug.toml  dependency-update.toml  pr-fix-feedback.toml  pr-review.toml  python-mypy.toml  readme-update.toml  refactor.toml  research.toml  rust-clippy.toml  skill-creator.toml  verify-changes.toml  write-tests.toml
src/: main.rs  tui.rs  workspace_trust.rs
src/cli/: app.rs  mod.rs
src/config/: load.rs  paths.rs  types.rs
src/core/: agent.rs  instructions.rs  loop_runtime.rs  mod.rs  observations.rs  rollback.rs  runtime.rs  todos.rs
src/error/: mod.rs
(+238 files in other folders)
